# my-app

accel_polling/: prj.conf
accel_polling/boards/: nucleo_h503rb.conf  nucleo_h503rb.overlay
accel_polling/src/: main.c
stream-iks4a1/: CMakeLists.txt  prj.conf
stream-iks4a1/boards/: nucleo_f401re.overlay
stream-iks4a1/src/: main.c
stream_drdy/: README.rst
stream_drdy/boards/: nucleo_h503rb.overlay
stream_drdy/src/: main.c
stream_fifo/: CMakeLists.txt  README.rst  prj.conf
stream_fifo/boards/: nucleo_f401re.conf  nucleo_f401re.overlay
stream_fifo/src/: main.c
test_otd_lib/: CMakeLists.txt  Kconfig  prj.conf
test_otd_lib/boards/: hifive1_fe310_B.overlay
test_otd_lib/otd_lib/: common_utils.h  otd.h
test_otd_lib/src/: main.c
